# ridgepark_reserve_study_web

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  generate_report_v3.2.ipynb  pyproject.toml  render.yaml  requirements.txt  reserve_plots.ipynb  reserve_plots.py  reserve_study_optimizer_v2.ipynb  reserve_study_optimizer_v3_0.ipynb  reserve_study_optimizer_v3_1.ipynb  reserve_study_v3.3.ipynb  reserve_study_v3_3.py
2026_board_collab/report_latex/: ridge_park_reserve_report_latex.tex
2026_board_collab/source_data/: assumptions.csv  component_list_v2.csv  component_list_v2.csv.0.csv
2026_board_collab/working_csv/: component_list_detail.csv  expenditures_by_year_detail.csv  expenditures_by_year_summary.csv  expenditures_matrix.csv  reserve_projection.csv  statement_of_position.csv  statement_of_position_formatted.csv
2026_brendan_plan/report_latex/: ridge_park_reserve_report_latex.tex
2026_brendan_plan/source_data/: assessment_contributions.csv
assets/: association_properties.csv  directory_structure.txt  reserve_report_base.tex
board_approved_2024/source_data/: assumptions.csv  (+2 more)
examples/: 01_run_study.ipynb  02_schedules.ipynb  03_reports_and_plots.ipynb  04_optimize_collections.ipynb
reserve_study/: __init__.py  models.py  optimizer.py  plotting.py  reporting.py  repository.py  schedules.py  study.py  utils.py
scripts/: build_plots.py  build_report.py  optimize_study.py  run_study.py
tests/: test_component.py  test_integration.py  test_projection.py  test_schedules.py
web/: README.md  app.py  requirements.txt  reserve_study_web_adapter.py
(+52 files in other folders)
